--- a/src/index.hbs
+++ b/src/index.hbs
@@ -226,7 +226,7 @@
       <span>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus, ac facilisis in, egestas eget quam praesent commodo cursus magna.</span>
     </div>
     
-    
+        
     <div class="promoann__movies">
       
       <div class="promoann__bch">
@@ -280,8 +280,7 @@
         </div>
         <div class="promoann__selfkeydesc">
           <div class="promoann__selfkeydescone">
-            <span>Selfkey Will Get Listed On Bitmin</span>
-            <span>05:48</span>
+            <span>Selfkey Will Get Listed On Bitmin</span>            
           </div>
           <div class="promoann__selfkeydesctwo">
             <span>My Selfkey</span>
@@ -317,6 +316,11 @@
         </div>
       </div>
 
+    </div>
+     
+
+    <div class="promoann__viewall">
+      <button>View all announcement</button>
     </div>
 
 
