--- a/src/less/var.less
+++ b/src/less/var.less
@@ -1,5 +1,6 @@
 @border: 1px solid red;
 @colorred: #b92c34;
+@colorblue: #6f54f1;
 @colordarkblue: #292a3c;
 @colorverydarkblue: #272637;
 @colorbluegray: #3a3a52;
