--- a/src/less/style.less
+++ b/src/less/style.less
@@ -171,14 +171,14 @@
 }
 
 .mixinmoviesblock {
-  border: @border;
+  //border: @border;
   width: 280px;
-  height: 100%;  
+  height: 285px;  
   margin: 0 10px;
 }
 
 .mixinmoviesvideo {
-  border: @border;    
+  //border: @border;    
   display: flex;
   justify-content: center;    
   align-items: center;
@@ -202,7 +202,7 @@
 }
 
 .mixindesc {
-  border: @border;
+  //border: @border;
   display: flex;
   flex-direction: column;        
   justify-content: center;
@@ -212,7 +212,7 @@
 }
 
 .mixindescone {
-  border: @border;
+  //border: @border;
   display: flex;
   justify-content: space-between;    
   span {
@@ -1043,30 +1043,52 @@
 // SECTION PROMO START
 .promoann {
   &__wrapper {
-    border: @border;
+    //border: @border;
     display: flex;
     flex-direction: column;
-    background-color: @colordarkblue;
-    height: 1000px;
+    background-color: @colordarkblue;    
   }
-  &__hdrpromo {
+  &__hdrpromo {    
     .mixinhdrstext();
+    //border: @border;
     margin-top: 80px;
     color: white;
+    text-align: center;
     font-family: 'Sulphur Point', sans-serif; 
     font-size: 2.5rem;
     font-weight: bold;
+    .xl-block({
+      font-size: 2rem;
+    });
   }
   &__descpromo {
     .mixintextdesc();
+    //border: @border;    
     color: white;
+    .xxl-block({
+      width: 55%;
+    });
+    .xl-block({
+      font-size: 1rem;
+    });
+    .md-block({
+      width: 70%;
+    });
+    .xs-block({
+      width: 90%;
+    });
   }
   &__movies {
-    border: @border;
+    //border: @border;
     display: flex;
     justify-content: center;
-    margin-top: 50px;
-    height: 285px;
+    align-self: center;
+    width: 100%;
+    margin-top: 50px;    
+    .gxl-block({
+      flex-wrap: wrap;
+      width: 95%;
+    });
   }
   &__bch {
     .mixinmoviesblock();
@@ -1080,10 +1102,7 @@
   }
   &__bchdescone {
     .mixindescone();
-  }
-  &__bchdesctwo {
-    //border: @border;    
-  }
+  }  
   &__bitclave {
     .mixinmoviesblock();
     .mixinpromoannblocks();
@@ -1156,6 +1175,33 @@
   }
   &__qlinkdescone {
     .mixindescone();
+  }
+
+  &__viewall {
+    //border: @border;
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+    height: 55px;
+    margin: 40px 0 70px 0;
+    button {
+      border: none;
+      width: 270px;
+      height: 90%;
+      border-radius: 30px;
+      background-color: @colorblue;      
+      font-size: 1rem;
+      font-weight: bold;
+      color: white;
+      outline: none;
+      cursor: pointer;    
+      transition: @transition;  
+      .md-block({
+        width: 200px;
+        font-size: 0.8rem;
+        transition: @transition;  
+      });
+    }
   }
 
 
