--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,6 +17,7 @@
 <script src="/js/chartethhour.js"></script>
 <script src="/js/chartripplehour.js"></script>
 <script src="/js/chartcardanohour.js"></script>
+<script src="/js/slider.js"></script>
 
 </body>
 </html>
