--- a/views/index.hbs
+++ b/views/index.hbs
@@ -209,6 +209,14 @@
       </div>
      
     </div>
+
+    <div class="ccp__switchslide">
+      <input type="radio" name="swtch">
+      <input type="radio" name="swtch">
+      <input type="radio" name="swtch">
+      <input type="radio" name="swtch">
+    </div>
+
   </div>
 </section>
 {{!-- SECTION CCP END --}}
@@ -232,6 +240,7 @@
       <div class="promoann__bch">
         <div class="promoann__bchvideo">
           <button><i class="fa fa-play" aria-hidden="true"></i></button>
+          {{!-- <iframe width="300" height="300" src="https://www.youtube.com/embed/UoKlKx-3FcA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> --}}
         </div>
         <div class="promoann__bchdesc">
           <div class="promoann__bchdescone">
