work with buttun scrolling up

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -1,6 +1,12 @@
 {{!-- SECTION SMART START --}}
 <section class="smart">
   <div class="smart__wrapper">
+    <div class="smart__arrowup">
+      <button>
+        <i class="fa fa-arrow-up" aria-hidden="true"></i>        
+      </button>
+      <span>ВВЕРХ</span>
+    </div>
     <div class="smart__burgermenu">
       <div class="smart__burgerline1"></div>
       <div class="smart__burgerline2"></div>
