--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,6 +18,7 @@
 <script src="/js/chartripplehour.js"></script>
 <script src="/js/chartcardanohour.js"></script>
 <script src="/js/slider.js"></script>
+<script src="/js/scrollup.js"></script>
 
 </body>
 </html>
