--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,6 +206,39 @@
   flex-direction: column;
   width: 100%;
 }
+.smart__arrowup {
+  border: 1px solid red;
+  border-radius: 50%;
+  display: none;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  position: fixed;
+  left: 93%;
+  bottom: 5%;
+  width: 80px;
+  height: 80px;
+  cursor: pointer;
+}
+.smart__arrowup button {
+  border: 1px solid red;
+  border-radius: 50%;
+  background-color: transparent;
+  width: 50px;
+  height: 50px;
+  outline: none;
+  cursor: pointer;
+}
+.smart__arrowup button i {
+  font-size: 2rem;
+  color: darkblue;
+}
+.smart__arrowup span {
+  border: 1px solid red;
+  color: darkblue;
+  font-weight: bolder;
+  cursor: pointer;
+}
 .smart__burgermenu {
   border: 2px solid white;
   display: none;
