--- a/public/css/style.css
+++ b/public/css/style.css
@@ -207,9 +207,8 @@
   width: 100%;
 }
 .smart__arrowup {
-  border: 1px solid red;
   border-radius: 50%;
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
@@ -218,24 +217,27 @@
   bottom: 5%;
   width: 80px;
   height: 80px;
+  background-color: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+  opacity: 0;
   cursor: pointer;
 }
 .smart__arrowup button {
-  border: 1px solid red;
   border-radius: 50%;
   background-color: transparent;
   width: 50px;
   height: 50px;
+  border: none;
   outline: none;
   cursor: pointer;
 }
 .smart__arrowup button i {
   font-size: 2rem;
-  color: darkblue;
+  color: #6f54f1;
 }
 .smart__arrowup span {
-  border: 1px solid red;
-  color: darkblue;
+  color: #6f54f1;
+  font-size: 0.85rem;
   font-weight: bolder;
   cursor: pointer;
 }
