--- a/src/less/mixins.less
+++ b/src/less/mixins.less
@@ -164,7 +164,7 @@
   }
   
   .mixinmoviesblock {
-    border: @border;
+    //border: @border;
     width: 280px;
     height: 285px;  
     margin: 0 10px;
