need make require class

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,14 +11,16 @@
 <body>
   {{{body}}}
 
+
 <script src="/js/burger.js"></script>  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
 <script src="/js/chartbithour.js"></script>
-<script src="/js/chartethhour.js"></script>
+{{!-- <script src="/js/chartethhour.js"></script> --}}
 <script src="/js/chartripplehour.js"></script>
 <script src="/js/chartcardanohour.js"></script>
 <script src="/js/slider.js"></script>
 <script src="/js/scrollup.js"></script>
+<script src="/js/classCharts.js"></script>
 
 </body>
 </html>
