doing ajax-request to server

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -106,7 +106,7 @@
           </div>
           <div class="ccp__cardsbitcointimestapm">
             <button>Hour</button>
-            <button>Day</button>
+            <button id="crdbitday">Day</button>
             <button>Week</button>
             <button>Month</button>            
           </div>
