--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -12,6 +12,7 @@
   {{{body}}}
 
 <script src="/js/classCharts.js"></script>
+<script src="/js/switchDateCharts.js"></script>
 <script src="/js/burger.js"></script>  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
 <script src="/js/chartbithour.js"></script>
