--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,6 +16,7 @@
 <script src="/js/burger.js"></script>  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
 <script src="/js/chartbithour.js"></script>
+<script src="/js/chartbitday.js"></script>
 <script src="/js/chartethhour.js"></script>
 <script src="/js/chartripplehour.js"></script>
 <script src="/js/chartcardanohour.js"></script>
