work with letters

--- a/src/index.hbs
+++ b/src/index.hbs
@@ -102,10 +102,10 @@
             <span>-1.04%</span>
           </div>
           <div class="ccp__cardsbitcoingrapf">
-            <canvas id="bitcoinchart"></canvas>
+            <canvas id="bitcoinchart"></canvas>                                    {{!-- <canvas id="bitcoinchart"></canvas> --}}
           </div>
           <div class="ccp__cardsbitcointimestapm">
-            <button>Hour</button>
+            <button class="crdbithour">Hour</button>
             <button class="crdbitday">Day</button>
             <button>Week</button>
             <button>Month</button>            
@@ -134,7 +134,7 @@
             <span>+0.98%</span>
           </div>
           <div class="ccp__cardsethereumgrapf">
-            <canvas id="ethereumchart"></canvas>
+            <canvas id="ethereumchart"></canvas>                                     {{!-- <canvas id="ethereumchart"></canvas> --}}
           </div>
           <div class="ccp__cardsethereumtimestapm">
             <button>Hour</button>
@@ -166,7 +166,7 @@
             <span>+18.37%</span>
           </div>
           <div class="ccp__cardsripplegrapf">
-            <canvas id="ripplechart"></canvas>
+            <canvas id="ripplechart"></canvas>                                            {{!-- <canvas id="ripplechart"></canvas> --}}
           </div>
           <div class="ccp__cardsrippletimestapm">
             <button>Hour</button>
@@ -197,7 +197,7 @@
             <span>+9.38%</span>
           </div>
           <div class="ccp__cardscardanograpf">
-            <canvas id="cardanochart"></canvas>
+            <canvas id="cardanochart"></canvas>                                           {{!-- <canvas id="cardanochart"></canvas> --}}
           </div>
           <div class="ccp__cardscardanotimestapm">
             <button>Hour</button>
