--- a/views/index.hbs
+++ b/views/index.hbs
@@ -107,8 +107,8 @@
           <div class="ccp__cardsbitcointimestapm">
             <button class="crdbithour">Hour</button>
             <button class="crdbitday">Day</button>
-            <button>Week</button>
-            <button>Month</button>            
+            <button class="crdbitweek">Week</button>
+            <button class="crdbitmonth">Month</button>            
           </div>
         </div>
         <div class="ccp__cardsbitcoinfooter">
@@ -137,7 +137,7 @@
             <canvas id="ethereumchart"></canvas>                                     {{!-- <canvas id="ethereumchart"></canvas> --}}
           </div>
           <div class="ccp__cardsethereumtimestapm">
-            <button>Hour</button>
+            <button class="crdethhour">Hour</button>
             <button>Day</button>
             <button>Week</button>
             <button>Month</button>            
