--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,7 +17,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
 <script src="/js/chartbit.js"></script>
 <script src="/js/charteth.js"></script>
-<script src="/js/chartripplehour.js"></script>
+<script src="/js/chartripp.js"></script>
 <script src="/js/chartcardanohour.js"></script>
 <script src="/js/slider.js"></script>
 <script src="/js/scrollup.js"></script>
