--- a/views/index.hbs
+++ b/views/index.hbs
@@ -138,9 +138,9 @@
           </div>
           <div class="ccp__cardsethereumtimestapm">
             <button class="crdethhour">Hour</button>
-            <button>Day</button>
-            <button>Week</button>
-            <button>Month</button>            
+            <button class="crdethday">Day</button>
+            <button class="crdethweek">Week</button>
+            <button class="crdethmonth">Month</button>            
           </div>
         </div>
         <div class="ccp__cardsethereumfooter">
@@ -169,9 +169,9 @@
             <canvas id="ripplechart"></canvas>                                            {{!-- <canvas id="ripplechart"></canvas> --}}
           </div>
           <div class="ccp__cardsrippletimestapm">
-            <button>Hour</button>
-            <button>Day</button>
-            <button>Week</button>
+            <button class="crdripphour">Hour</button>
+            <button class="crdrippday">Day</button>
+            <button class="crdrippweek">Week</button>
             <button>Month</button>            
           </div>
         </div>
