--- a/views/index.hbs
+++ b/views/index.hbs
@@ -172,7 +172,7 @@
             <button class="crdripphour">Hour</button>
             <button class="crdrippday">Day</button>
             <button class="crdrippweek">Week</button>
-            <button>Month</button>            
+            <button class="crdrippmonth">Month</button>            
           </div>
         </div>
         <div class="ccp__cardsripplefooter">
@@ -200,10 +200,10 @@
             <canvas id="cardanochart"></canvas>                                           {{!-- <canvas id="cardanochart"></canvas> --}}
           </div>
           <div class="ccp__cardscardanotimestapm">
-            <button>Hour</button>
-            <button>Day</button>
-            <button>Week</button>
-            <button>Month</button>            
+            <button class="crdcardanohour">Hour</button>
+            <button class="crdcardanoday">Day</button>
+            <button class="crdcardanoweek">Week</button>
+            <button class="crdcardanomonth">Month</button>            
           </div>
         </div>
         <div class="ccp__cardscardanofooter">
