--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,7 +18,7 @@
 <script src="/js/chartbit.js"></script>
 <script src="/js/charteth.js"></script>
 <script src="/js/chartripp.js"></script>
-<script src="/js/chartcardanohour.js"></script>
+<script src="/js/chartcardano.js"></script>
 <script src="/js/slider.js"></script>
 <script src="/js/scrollup.js"></script>
 
