add video to promoann

--- a/src/less/promoann.less
+++ b/src/less/promoann.less
@@ -37,7 +37,7 @@
       });
     }
     &__movies {
-      border: @border;
+      //border: @border;
       display: flex;
       justify-content: center;
       align-self: center;
@@ -50,7 +50,7 @@
     }
     &__bch {
       .mixinmoviesblock();
-      .mixinpromoannblocks();
+      .mixinpromoannblocks();      
     }
     &__bchvideo {
       .mixinmoviesvideo();
