--- a/src/index.hbs
+++ b/src/index.hbs
@@ -245,8 +245,8 @@
       
       <div class="promoann__bch">
         <div class="promoann__bchvideo">
-          <button><i class="fa fa-play" aria-hidden="true"></i></button>
-          {{!-- <iframe width="300" height="300" src="https://www.youtube.com/embed/UoKlKx-3FcA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> --}}
+          {{!-- <button><i class="fa fa-play" aria-hidden="true"></i></button> --}}
+          <iframe width="280" height="230" src="https://www.youtube.com/embed/UoKlKx-3FcA" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="promoann__bchdesc">
           <div class="promoann__bchdescone">
@@ -261,7 +261,8 @@
 
       <div class="promoann__bitclave">
         <div class="promoann__bitclavevideo">
-          <button><i class="fa fa-play" aria-hidden="true"></i></button>
+          {{!-- <button><i class="fa fa-play" aria-hidden="true"></i></button> --}}
+          <iframe width="280" height="230" src="https://www.youtube.com/embed/WseIQn5HokU" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
         </div>
         <div class="promoann__bitclavedesc">
           <div class="promoann__bitclavedescone">
@@ -276,7 +277,8 @@
 
       <div class="promoann__annoucement">
         <div class="promoann__annoucementvideo">
-          <button><i class="fa fa-play" aria-hidden="true"></i></button>
+          {{!-- <button><i class="fa fa-play" aria-hidden="true"></i></button> --}}
+          <iframe width="280" height="230" src="https://www.youtube.com/embed/F0T0Y91npYg" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="promoann__annoucementdesc">
           <div class="promoann__annoucementdescone">
@@ -291,7 +293,8 @@
 
       <div class="promoann__selfkey">
         <div class="promoann__selfkeyvideo">
-          <button><i class="fa fa-play" aria-hidden="true"></i></button>
+          {{!-- <button><i class="fa fa-play" aria-hidden="true"></i></button> --}}
+          <iframe width="280" height="230" src="https://www.youtube.com/embed/8kJbXM1rftk" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
         </div>
         <div class="promoann__selfkeydesc">
           <div class="promoann__selfkeydescone">
@@ -305,7 +308,8 @@
 
       <div class="promoann__canya">
         <div class="promoann__canyavideo">
-          <button><i class="fa fa-play" aria-hidden="true"></i></button>
+          {{!-- <button><i class="fa fa-play" aria-hidden="true"></i></button> --}}
+          <iframe width="280" height="230" src="https://www.youtube.com/embed/XpTLQaQnNU8" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="promoann__canyadesc">
           <div class="promoann__canyadescone">
@@ -319,7 +323,9 @@
 
       <div class="promoann__qlink">
         <div class="promoann__qlinkvideo">
-          <button><i class="fa fa-play" aria-hidden="true"></i></button>
+          {{!-- <button><i class="fa fa-play" aria-hidden="true"></i></button> --}}
+          {{!-- <iframe width="280" height="230" src="https://www.youtube.com/embed/Og2HsT1qX5s" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> --}}
+          {{!-- <iframe width="280" height="230" src="https://www.youtube.com/embed/UoKlKx-3FcA" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> --}}
         </div>
         <div class="promoann__qlinkdesc">
           <div class="promoann__qlinkdescone">
