--- a/src/less/promoann.less
+++ b/src/less/promoann.less
@@ -124,6 +124,7 @@
   
     &__qlink {
       .mixinmoviesblock();
+      .mixinpromoannblocks();
     }
     &__qlinkvideo {
       .mixinmoviesvideo();
