work with switch script

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -11,11 +11,11 @@
 <body>
   {{{body}}}
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
 <script src="/js/classCharts.js"></script>
 <script src="/js/switchDateCharts.js"></script>
 <script src="/js/burger.js"></script>  
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
-<script src="/js/chartbit.js"></script>
+{{!-- <script src="/js/chartbit.js"></script> --}}
 <script src="/js/charteth.js"></script>
 <script src="/js/chartripp.js"></script>
 <script src="/js/chartcardano.js"></script>
