--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,9 +16,9 @@
 <script src="/js/switchDateCharts.js"></script>
 <script src="/js/burger.js"></script>  
 {{!-- <script src="/js/chartbit.js"></script> --}}
-<script src="/js/charteth.js"></script>
-<script src="/js/chartripp.js"></script>
-<script src="/js/chartcardano.js"></script>
+{{!-- <script src="/js/charteth.js"></script> --}}
+{{!-- <script src="/js/chartripp.js"></script> --}}
+{{!-- <script src="/js/chartcardano.js"></script> --}}
 <script src="/js/slider.js"></script>
 <script src="/js/scrollup.js"></script>
 
